--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,6 @@
 
-
-     
-     
-     
-         /* Login Screen */
+      
+      /* Login Screen */
 
 
       .login_body{
@@ -102,10 +99,188 @@
         display: block;
         width: 100%;
       }
-  
-     
-     
-     /* landing page */
+
+
+      /* Forget Password Screen */
+      .forget_password_body {
+        font-family: Arial, sans-serif;
+        background-color: #ffffff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+      }
+      
+      .forget_password {
+        width: 350px;
+        padding: 25px 20px;
+        border: 1px solid #ddd;
+        border-radius: 10px;
+        background-color: #fff;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+      }
+      
+      .forget_password h2 {
+        text-align: center;
+        margin-bottom: 20px;
+      }
+      
+      .forget_password p {
+        font-size: 14px;
+        margin-bottom: 15px;
+        color: #333;
+      }
+      
+      .forget_password #error {
+        color: red;
+        font-size: 14px;
+        margin-bottom: 10px;
+        text-align: center;
+      }
+      
+      .forget_password fieldset {
+        border: none;
+        padding: 0;
+        margin: 0;
+      }
+      
+      .forget_password label {
+        font-weight: bold;
+        display: block;
+        margin-bottom: 6px;
+      }
+      
+      .forget_password input[type="text"] {
+        width: 100%;
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        box-sizing: border-box;
+      }
+      
+      .forget_password button {
+        margin-top: 15px;
+        width: 100%;
+        padding: 10px;
+        background-color: #f5c518;
+        color: black;
+        border: none;
+        font-weight: bold;
+        font-size: 14px;
+        border-radius: 20px;
+        cursor: pointer;
+      }
+      
+      .forget_password button:hover {
+        background-color: #e3b30c;
+      }
+      
+      .reset_body{
+        font-family:Arial;
+        background-color:#ffff;
+        display:flex;
+        justify-content:center;
+        align-items:center;
+        height:100vh;
+      }
+
+      .reset{
+        width: 350px;
+        border: 1px solid #ccc;
+        border-radius: 10px;
+        padding: 30px 25px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+        background-color: #fff;
+      }
+
+      .reset fieldset{
+        border: none;
+      }
+
+      .reset legend {
+        font-size: 24px;
+        font-weight: bold;
+        margin-bottom: 20px;
+      }
+
+
+      .profile_body {
+        font-family: Arial, sans-serif;
+        background-color: #fafafa;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+      }
+      
+      .profile_container {
+        width: 350px;
+        padding: 25px;
+        border: 1px solid #ccc;
+        border-radius: 10px;
+        background: white;
+        box-shadow: 0 0 10px rgba(0,0,0,0.05);
+      }
+      
+      .profile_container h2 {
+        text-align: center;
+        margin-bottom: 20px;
+      }
+      
+      .profile_fields label {
+        font-weight: bold;
+        display: block;
+        margin-top: 10px;
+      }
+      
+      .profile_fields input {
+        width: 100%;
+        padding: 10px;
+        margin-top: 5px;
+        margin-bottom: 10px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        box-sizing: border-box;
+      }
+      
+      #toggleBtn {
+        width: 100%;
+        padding: 10px;
+        background-color: #f5c518;
+        color: black;
+        font-weight: bold;
+        border: none;
+        border-radius: 20px;
+        cursor: pointer;
+      }
+      
+      #toggleBtn:hover {
+        background-color: #e3b30c;
+      }
+
+      .profile_picture_section {
+        text-align: center;
+        margin-bottom: 20px;
+      }
+      
+      .profile_picture_section img {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        object-fit: cover;
+        border: 2px solid #ccc;
+        margin-bottom: 10px;
+      }
+      
+      .profile_picture_section input[type="file"] {
+        display: block;
+        margin: 0 auto;
+      }
+      #uploadPic {
+        display: none;
+      }
+
+      /* landing page */
       body {
         margin: 0;
         font-family: Arial, sans-serif;
@@ -113,49 +288,40 @@
         color: #333;
       }
   
-nav {
-  background-color: #f5c518;
-  padding: 15px 30px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: fixed;   /* সবসময় টপে থাকবে */
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 1000;     /* ব্যানারের উপরে থাকবে */
-}
-
-nav .logo a {
-  font-weight: bold;
-  font-size: 24px;
-  text-decoration: none;
-  color: black;
-}
-
-nav .menu a {
-  margin-left: 20px;
-  text-decoration: none;
-  color: black;
-  font-weight: bold;
-}
-      
+       nav {
+        background-color: #f5c518;
+        padding: 15px 30px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+      }
+  
+      nav .logo a {
+        font-weight: bold;
+        font-size: 24px;
+        text-decoration: none;
+        color: black;
+      }
+    
+    
+  
+      nav .menu a {
+        margin-left: 20px;
+        text-decoration: none;
+        color: black;
+        font-weight: bold;
+      } 
 
 
-
-      
-
-
-
-.banner {
-  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRl9BcgXCBK15cXryD_jOe-XtQ86nZC0m2EfQ&s'); 
-  background-size: cover;
-  background-position: center;
-  padding: 80px 20px;
-  text-align: center;
-  color: white;
-  margin-top: 80px;  /* ন্যাভবারের নিচ থেকে শুরু হবে */
-}
+  
+      .banner {
+        background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRl9BcgXCBK15cXryD_jOe-XtQ86nZC0m2EfQ&s'); 
+        background-size: cover;
+        background-position: center;
+        padding: 80px 20px;
+        text-align: center;
+        color: white;
+      }
   
       .banner h1 {
         font-size: 48px;
@@ -213,7 +379,296 @@ nav .menu a {
         color: #444;
       }
   
-    
+      .movie-slider {
+        display: flex;
+        overflow-x: auto;
+        gap: 20px;
+        padding-bottom: 10px;
+      }
+  
+  
+      .movie-card {
+        width: 200px;
+        height: 350px;
+        background: #fff;
+        border-radius: 10px;
+        overflow: hidden;
+        box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        flex-shrink: 0;
+        display: flex;
+        flex-direction: column;
+        transition: transform 0.3s ease;
+        cursor: pointer;
+      }
+      
+      .movie-card img {
+        width: 100%;
+        height: 100%; 
+        object-fit: cover; 
+        display: block;
+      }
+      
+      .movie-image-wrapper {
+        width: 100%;
+        height: 260px; 
+        overflow: hidden;
+      }
+      
+      .movie-card p {
+        flex: 10;
+        padding: 10px;
+        font-weight: bold;
+        font-size: 16px;
+        text-align: center;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+      
+      .movie-card:hover {
+        transform: scale(1.05);
+      }
+      
+      .movie-image-wrapper img:hover {
+        transform: scale(1.1);
+        transition: transform 0.3s ease;
+      }
+      
+
+
+      /* movie details */
+      body {
+        margin: 0;
+        font-family: Arial, sans-serif;
+        background-color: #fff8e1;
+        color: #333;
+      }
+      
+      .movie-header {
+        display: flex;
+        background-color: black; 
+        color: white;
+        padding: 40px;
+        gap: 30px;
+        border-radius:0.5%;
+      }
+  
+      .poster img {
+        width: 250px;
+        height: 375px;
+        object-fit: cover;
+        border-radius: 10px;
+      }
+  
+      .movie-info {
+        flex: 1;
+      }
+  
+      .movie-info h1 {
+        padding-top: 20%; 
+        font-size: 36px;
+        margin: 0;
+      }
+  
+      .sub-info {
+        margin: 10px 0;
+        font-size: 16px;
+        color: #ccc;
+      }
+  
+      .user-score {
+        margin-top: 20px;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+      }
+  
+      .circle-score {
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        background: #4caf50;
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: bold;
+        font-size: 18px;
+      }
+  
+      .overview-section {
+        padding: 30px;
+      }
+  
+      .overview-section h2 {
+        font-size: 28px;
+        margin-bottom: 10px;
+      }
+  
+      .overview-section p {
+        font-size: 18px;
+        color: #555;
+      }
+  
+      .main-content {
+        display: flex;
+        padding: 30px;
+        gap: 30px;
+      }
+  
+      .left-content {
+        flex: 3;
+      }
+  
+      .right-sidebar {
+        flex: 1;
+        background: #ffffff;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      }
+  
+      .sidebar-item {
+        margin-bottom: 20px;
+      }
+  
+      .sidebar-item h4 {
+        margin: 0 0 5px;
+        font-size: 16px;
+        color: #888;
+      }
+  
+      .sidebar-item p {
+        margin: 0;
+        font-size: 18px;
+        font-weight: bold;
+      }
+  
+      .cast-section {
+        margin-top: 30px;
+      }
+  
+      .cast-section h2 {
+        font-size: 24px;
+        margin-bottom: 15px;
+      }
+  
+      .cast-cards {
+        display: flex;
+        overflow-x: auto;
+        gap: 15px;
+      }
+  
+      .cast-card {
+        min-width: 120px;
+        background: #fff;
+        border-radius: 10px;
+        box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+        text-align: center;
+        padding: 10px;
+      }
+  
+      .cast-card img {
+        width: 100%;
+        height: 150px;
+        object-fit: cover;
+        border-radius: 8px;
+      }
+  
+      .cast-card p {
+        margin: 5px 0;
+        font-size: 14px;
+      }
+  
+      .review-section {
+        margin-top: 30px;
+      }
+  
+      .review-box {
+        background: white;
+        padding: 20px;
+        border-radius: 10px;
+        margin-bottom: 20px;
+        box-shadow: 0 0 8px rgba(0,0,0,0.1);
+      }
+  
+      .review-box h4 {
+        margin-top: 0;
+      }
+
+      .trivia_body {
+        font-family: Arial;
+        background-color: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+      }
+      
+      .trivia_container {
+        width: 350px;
+        border: 1px solid #ccc;
+        border-radius: 10px;
+        padding: 30px 25px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+        background-color: #fff;
+      }
+      
+      .trivia_container legend {
+        font-size: 24px;
+        font-weight: bold;
+        margin-bottom: 20px;
+        text-align: center;
+      }
+      
+      .trivia_category {
+        margin-bottom: 20px;
+      }
+      
+      .trivia_category h3 {
+        font-size: 18px;
+        margin-bottom: 10px;
+        color: #444;
+      }
+      
+      .trivia_category ul {
+        padding-left: 18px;
+        font-size: 14px;
+        color: #555;
+      }
+      
+      .trivia_form label {
+        font-size: 14px;
+        font-weight: bold;
+        display: block;
+        margin-bottom: 5px;
+      }
+      
+      .trivia_form input[type="text"] {
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 12px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+      }
+      
+      .trivia_form button {
+        width: 100%;
+        background-color: #f5c518;
+        color: black;
+        padding: 10px;
+        border: none;
+        font-weight: bold;
+        font-size: 14px;
+        border-radius: 20px;
+        cursor: pointer;
+      }
+      
+      .trivia_form button:hover {
+        background-color: #e3b30c;
+      }
+
+      
 
       
       
